tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/string/multiline-escape-space.stderr
TOML parse error at line 2, column 9
  |
2 |   foo \ \n
  |         ^
invalid escape sequence
expected `b`, `f`, `n`, `r`, `t`, `u`, `U`, `\`, `"`
